--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Coffee Project</title>
     </head>
     <body>
+        <img id="logo" src="asset/image/logo.svg" hidden></img>
     </body>
     <script src="lib/coffee_math.js"></script>
     <script src="lib/coffee_main.js"></script>
